test/files/tokenizer/errors/invalid-symbol-number.otest
name = "Invalid symbol in number"
line = 2
character = 3
error = 'Unrecognized symbol "$".'

---

12$
